# accsynt

./: .clang-format  .gitattributes  .gitignore  Doxyfile  Doxyfile.in  README.md  conanfile.txt  data.csv  data.txt  dataset.txt  learn.py  requirements.txt  rt_data.txt
src/: CMakeLists.txt
src/asyn/: CMakeLists.txt
src/asyn/src/: main.cpp
src/climber/: CMakeLists.txt
src/climber/src/: main.cpp
src/cmake/modules/: ClangTidy.cmake  LinkFilesystem.cmake  ListJoin.cmake  TimeTrace.cmake
src/coverage/: CMakeLists.txt
src/coverage/include/coverage/: coverage.h
src/coverage/src/: main.cpp  options.cpp  options.h  wrapper.cpp
src/coverage/test/: main.cpp  wrapper.cpp
src/holes/: CMakeLists.txt
src/holes/include/holes/: holes.h
src/holes/src/: holes.cpp
src/holes/test/: main.cpp
src/ifind/: CMakeLists.txt
src/ifind/src/: main.cpp
src/ifind/test/inputs/: CMakeLists.txt  adds.c  basic.json  branch.c  deps.c  empty.c  gemv.json  vsum.c
src/interfind/: CMakeLists.txt
src/interfind/include/interfind/: analysis.h  common.h  finder.h  format.h  interfind.h  region.h  use_def.h  visitors.h
src/interfind/src/: analysis.cpp  common.cpp  finder.cpp  json.cpp  region.cpp  use_def.cpp  visitors.cpp
src/interfind/test/: use_def.cpp
src/io/: CMakeLists.txt
src/io/src/: main.cpp  options.cpp  options.h
src/passes/: CMakeLists.txt
src/passes/include/passes/: count.h  passes.h
src/passes/src/: clean.cpp  count.cpp  cyclo.cpp  deduplicate.cpp  fix_floats.cpp  namer.cpp  opcode.cpp  opcode.h  passes.h  to_idl.cpp  translate.cpp  translate.h
src/passes/test/: test.ll
src/perf/: CMakeLists.txt
src/perf/src/: main.cpp  options.cpp  options.h
src/predictor/: CMakeLists.txt
src/predictor/include/model/: model.h
src/predictor/model/: CMakeLists.txt  data.csv  learn.py  requirements.txt
src/predictor/model/src/: generated.c  harness.cpp  internal.h
src/predictor/scripts/: chain.py  data.csv  generate-code.sh  keys.py  learn.py  names.csv  names.py  requirements.txt
src/predictor/src/: generated.c  harness.cpp  internal.h  main.cpp  prepare_data.cpp  prepare_data.h
src/predictor/test/: prepare_data.cpp
src/presyn/: CMakeLists.txt
src/presyn/src/: candidate.cpp  candidate.h  candidate_operations.cpp  candidate_visitors.cpp  candidate_visitors.h  constants.cpp  constants.h  error_function.cpp  error_function.h  filler.cpp  filler.h  fragment.cpp  fragment.h  fragment_parse.cpp  fragment_parse.h  main.cpp  optimiser.cpp  optimiser.h  options.cpp  options.h  oracle.cpp  oracle_options.cpp  oracle_options.h  parameter.cpp  parameter.h  random_filler.cpp  random_filler.h  repl.cpp  rule_filler.cpp  rule_filler.h  rules.cpp  rules.h  sketch.cpp  sketch.h  sketch_context.cpp  sketch_context.h  stub.cpp  stub.h
src/presyn/test/: error_function.cpp  fragment.cpp  optimiser.cpp  parsing.cpp  regression.cpp
src/props/: CMakeLists.txt
src/props/include/props/: core.h  format.h  props.h  sig_visitor.h
src/props/src/: comparisons.cpp  llvm_function.cpp  parsing.cpp  printing.cpp  props.cpp  sig_visitor.cpp
src/props/test/: compare.cpp  llvm.cpp  main.cpp  parsing.cpp  printing.cpp  usage.cpp  visitor.cpp
src/props/test/inputs/: add.props  bias.props  dot.props  store.props  test_a.props  v_add.props  v_copy.props  v_sum.props
src/replacer/: CMakeLists.txt
src/replacer/include/replacer/: replace.h
src/replacer/src/: lib.cpp  main.cpp
src/replacer/test/: example.json  json.cpp
src/support/: CMakeLists.txt
src/support/include/support/: argument_generator.h  assert.h  bit_cast.h  call_builder.h  call_wrapper.h  cartesian_product.h  choose.h  colour.h  containers.h  dbg.h  debug.h  dynamic_library.h  file.h  filesystem.h  float_compare.h  hash.h  hashes.h  indent.h  input.h  instr_count.h  llvm_cloning.h  llvm_format.h  llvm_types.h  llvm_utils.h  llvm_values.h  load_module.h  narrow_cast.h  options.h  random.h  similarity.h  string.h  terminal.h  thread_context.h  timeout.h  traits.h  tuple.h  type_finder.h  utility.h  value_ptr.h  visitor.h
src/support/src/: argument_generator.cpp  call_builder.cpp  call_wrapper.cpp  choose.cpp  dynamic_library.cpp  file.cpp  float_compare.cpp  hash.cpp  input.cpp  instr_count.cpp  llvm_cloning.cpp  llvm_types.cpp  llvm_utils.cpp  llvm_values.cpp  load_module.cpp  options.cpp  random.cpp  similarity.cpp  string.cpp  thread_context.cpp  timeout.cpp
src/support/test/: argument_generator.cpp  bit_cast.cpp  call_builder.cpp  cartesian_product.cpp  choose.cpp  containers.cpp  floats.cpp  hash.cpp  instr_count.cpp  llvm_types.cpp  llvm_values.cpp  load_module.cpp  main.cpp  random.cpp  similarity.cpp  string.cpp  timeout.cpp  traits.cpp  utility.cpp  value_ptr.cpp
src/synth/: CMakeLists.txt
src/synth/src/: accessor.cpp  accessor.h  accessor_rules.cpp  accessor_rules.h  affine_fragment.cpp  affine_fragment.h  blas_properties.cpp  blas_properties.h  blas_synth.cpp  blas_synth.h  call_builder.cpp  call_builder.h  call_wrapper.cpp  call_wrapper.h  compile_context.cpp  compile_context.h  compile_metadata.cpp  compile_metadata.h  data_loop_fragment.cpp  data_loop_fragment.h  dataflow_synth.cpp  dataflow_synth.h  evaluator.cpp  evaluator.h  fragment.cpp  fragment.h  fragment_demo.cpp  fragment_id.cpp  fragment_id.h  fragment_registry.cpp  generator.cpp  generator.h  generator_rules.cpp  generator_rules.h  gp_sampler.cpp  gp_sampler.h  hill_synth.cpp  hill_synth.h  hypothesis.cpp  indexing.cpp  (+25 more)
src/synth/test/: add.c  asum.props  bias.c  call_builder.cpp  clean  compile_shared  det.c  det.props  fragment_id.cpp  gemv.c  gemv_full.props  gemv_plus.c  linear_fragment.cpp  mag.c  mag.props  normalise.c  regular_loop_fragment.cpp  relu.c  saxpy.props  v_copy.c  vec2sum.c  vec2sum.props
src/tools/: CMakeLists.txt
src/tools/src/: algorithm.cpp  algorithm.h  convert.cpp  count.cpp  cyclo.cpp  detect.cpp  divine.cpp  filter.cpp  graph.cpp  graph_match.cpp  instrument.cpp  klee_llvm.cpp  klee_llvm.h  load_graph.cpp  match.cpp  match.h  name.cpp  node.cpp  norm.cpp  print_opcode.cpp  print_opcode.h  sanity-check.cpp
(+670 files in other folders)
